--- a/app/src/main/res/layout/sign_up_fragment.xml
+++ b/app/src/main/res/layout/sign_up_fragment.xml
@@ -64,6 +64,7 @@
                         android:src="@drawable/ic_edit_white_24dp"
                         app:backgroundTint="@color/colorPrimary"
                         app:elevation="6dp"
+                        app:tint="@color/cardview_light_background"
                         app:fabCustomSize="30dp"
                         app:fabSize="mini"
                         app:maxImageSize="20dp" />
