journey entity changed and journey list views modified

--- a/app/src/main/res/navigation/main_bottom_navigation.xml
+++ b/app/src/main/res/navigation/main_bottom_navigation.xml
@@ -89,7 +89,7 @@
     </fragment>
     <fragment
         android:id="@+id/journeyDetailsFragment"
-        android:name="com.treflor.ui.home.journey.JourneyDetailsFragment"
+        android:name="com.treflor.ui.home.detailed.JourneyDetailsFragment"
         android:label="journey_details_fragment_motion_start"
         tools:layout="@layout/journey_details_fragment_motion_start" />
 </navigation>
