--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -27,34 +27,24 @@
 
         <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="675dp">
+            android:layout_height="wrap_content">
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical" >
+                android:layout_height="match_parent"
+                android:orientation="horizontal"
+                android:weightSum="1">
 
-                <TextView
-                    android:id="@+id/textView3"
+                <GridView
                     android:layout_width="match_parent"
-                    android:layout_height="116dp"
-                    android:layout_margin="@dimen/ef_margin_small"
-                    android:background="@drawable/sample3"
-                    android:fadingEdge="horizontal|vertical"
-                    android:fadingEdgeLength="@dimen/ef_margin_small"
-                    android:fontFamily="@font/roboto"
-                    android:gravity="bottom"
-                    android:paddingStart="@dimen/ef_padding_medium"
-                    android:paddingBottom="@dimen/ef_margin_small"
-                    android:shadowColor="@color/common_google_signin_btn_text_light_pressed"
-                    android:shadowRadius="@dimen/ef_padding_medium"
-                    android:text="TextView"
-                    android:textColor="@color/design_default_color_background"
-                    android:textSize="30sp"
-                    android:textStyle="bold"
-                    app:drawableTint="#00FFFFFF"
-                    app:drawableTintMode="src_over"
-                    tools:text="Trip 1" />
+                    android:layout_height="match_parent"
+                    android:numColumns="2"
+                    android:gravity="center"
+                    android:padding="5dp"
+                    android:verticalSpacing="10dp"
+                    android:horizontalSpacing="10dp"
+                    android:stretchMode="columnWidth"/>
+
             </LinearLayout>
         </ScrollView>
 
