--- a/app/src/main/res/layout/start_journey_fragment.xml
+++ b/app/src/main/res/layout/start_journey_fragment.xml
@@ -24,7 +24,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="55dp"
                 android:layout_marginTop="@dimen/ef_margin_small"
-                android:layout_marginBottom="@dimen/ef_margin_small"
+                android:layout_marginBottom="10dp"
                 android:gravity="center"
                 android:text="Let's start the journey"
                 android:textSize="24dp"
@@ -44,7 +44,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/ef_margin_small"
-
                 android:layout_marginBottom="@dimen/ef_margin_small"
                 android:hint="Say what you feel!"
                 android:inputType="textMultiLine"
