current user and current journey providers created due to room warning on primary keys

--- a/app/src/main/res/navigation/main_bottom_navigation.xml
+++ b/app/src/main/res/navigation/main_bottom_navigation.xml
@@ -91,5 +91,9 @@
         android:id="@+id/journeyDetailsFragment"
         android:name="com.treflor.ui.home.detailed.JourneyDetailsFragment"
         android:label="journey_details_fragment_motion_start"
-        tools:layout="@layout/journey_details_fragment_motion_start" />
+        tools:layout="@layout/journey_details_fragment" >
+        <argument
+            android:name="id"
+            app:argType="string" />
+    </fragment>
 </navigation>
