--- a/app/src/main/res/layout/journey_details_fragment.xml
+++ b/app/src/main/res/layout/journey_details_fragment.xml
@@ -6,7 +6,6 @@
     android:layout_height="match_parent"
     tools:context=".ui.home.detailed.JourneyDetailsFragment">
 
-
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appbar_layout"
         android:layout_width="match_parent"
@@ -96,7 +95,7 @@
                     android:background="@drawable/difficulty_tag"
                     android:gravity="center"
                     android:padding="5dp"
-                    android:text="hard"
+                    android:text=""
                     android:textColor="@android:color/white"
                     android:textSize="15dp" />
 
@@ -134,7 +133,7 @@
                     android:id="@+id/tv_distance"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="1.5 km" />
+                    android:text="" />
 
                 <View
                     android:layout_width="0dp"
@@ -145,7 +144,7 @@
                     android:id="@+id/tv_duration"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="6 mins" />
+                    android:text="" />
             </LinearLayout>
 
             <LinearLayout
@@ -168,7 +167,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="6 minvcbcvs" />
+                    android:text="" />
             </LinearLayout>
 
             <LinearLayout
@@ -191,7 +190,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="6 minvcbcvs" />
+                    android:text="" />
             </LinearLayout>
 
             <com.google.android.material.chip.ChipGroup
@@ -200,7 +199,7 @@
                 android:id="@+id/chip_group_labels"/>
 
             <TextView
-                android:id="@+id/content"
+                android:id="@+id/tv_content"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
