--- a/app/src/main/res/layout/general_settings_fragment.xml
+++ b/app/src/main/res/layout/general_settings_fragment.xml
@@ -14,7 +14,11 @@
             android:layout_height="wrap_content"
             android:background="@color/ef_white"
             android:minHeight="?attr/actionBarSize"
-            android:theme="?attr/actionBarTheme"/>
+            android:theme="?attr/actionBarTheme"
+            app:logo="@drawable/ic_arrow_back_black"
+            app:title="Edit profile details"
+            app:titleMarginStart="40dp"
+            app:titleTextColor="#FF081E6F" />
 
         <RelativeLayout
             android:layout_width="150dp"
@@ -55,46 +59,46 @@
             android:id="@+id/ed_name"
             android:layout_width="match_parent"
             android:layout_height="60dp"
-            android:layout_marginStart="15dp"
+            android:layout_marginStart="20dp"
             android:layout_marginTop="10dp"
-            android:layout_marginEnd="15dp"
+            android:layout_marginEnd="20dp"
             android:layout_marginBottom="5dp"
             android:fontFamily="@font/roboto"
             android:hint="User Name"
             android:inputType="text"
             android:textColor="#000000"
             android:textColorHint="#000000"
-            android:textSize="18sp" />
+            android:textSize="16sp" />
 
         <EditText
             android:id="@+id/ed_name2"
             android:layout_width="match_parent"
             android:layout_height="60dp"
-            android:layout_marginStart="15dp"
+            android:layout_marginStart="20dp"
             android:layout_marginTop="10dp"
-            android:layout_marginEnd="15dp"
+            android:layout_marginEnd="20dp"
             android:layout_marginBottom="5dp"
             android:fontFamily="@font/roboto"
             android:hint="Email"
             android:inputType="text"
             android:textColor="#000000"
             android:textColorHint="#000000"
-            android:textSize="18sp" />
+            android:textSize="16sp" />
 
         <EditText
             android:id="@+id/ed_name3"
             android:layout_width="match_parent"
             android:layout_height="60dp"
-            android:layout_marginStart="15dp"
+            android:layout_marginStart="20dp"
             android:layout_marginTop="10dp"
-            android:layout_marginEnd="15dp"
+            android:layout_marginEnd="20dp"
             android:layout_marginBottom="5dp"
             android:fontFamily="@font/roboto"
             android:hint="Phone number"
             android:inputType="text"
             android:textColor="#000000"
             android:textColorHint="#000000"
-            android:textSize="18sp" />
+            android:textSize="16sp" />
 
         <Button
             android:id="@+id/button2"
@@ -102,7 +106,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="right|end"
             android:layout_marginTop="20dp"
-            android:layout_marginRight="15dp"
+            android:layout_marginRight="20dp"
             android:background="@drawable/btn1"
             android:fontFamily="@font/roboto_medium"
             android:text="Save Changes"
