--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -20,7 +20,10 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="@color/colorPrimary">
+            android:background="#FFFFFF"
+            app:title="Home"
+            app:titleMarginStart="20dp"
+            app:titleTextColor="#FF081E6F">
 
 
         </androidx.appcompat.widget.Toolbar>
