--- a/app/src/main/res/layout/security_settings_fragment.xml
+++ b/app/src/main/res/layout/security_settings_fragment.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -10,7 +11,11 @@
         android:layout_height="wrap_content"
         android:background="#FFFFFF"
         android:minHeight="?attr/actionBarSize"
-        android:theme="?attr/actionBarTheme" />
+        android:theme="?attr/actionBarTheme"
+        app:logo="@drawable/ic_arrow_back_black"
+        app:title="Change Password"
+        app:titleMarginStart="40dp"
+        app:titleTextColor="#FF081E6F" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -19,25 +24,11 @@
         android:layout_marginEnd="20dp"
         android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/textView3"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:layout_marginBottom="10dp"
-            android:fontFamily="@font/roboto_medium"
-            android:paddingTop="10dp"
-            android:paddingBottom="10dp"
-            android:text="Change password"
-            android:textColor="#000000"
-            android:textSize="20sp"
-            android:textStyle="bold" />
-
         <EditText
             android:id="@+id/current_password"
             android:layout_width="match_parent"
             android:layout_height="52dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="50dp"
             android:background="@android:drawable/editbox_background_normal"
             android:hint="Current Password"
             android:inputType="textPassword"
