--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -30,7 +30,7 @@
             android:layout_marginBottom="@dimen/ef_margin_small"
             android:fontFamily="@font/roboto"
             android:hint="email"
-            android:textColor="@color/TextClr"
+            android:textColor="@color/colorBlack"
             android:textSize="15sp" />
 
         <EditText
@@ -42,7 +42,7 @@
             android:fontFamily="@font/roboto"
             android:hint="Password"
             android:inputType="textPassword"
-            android:textColor="@color/TextClr"
+            android:textColor="@color/colorBlack"
             android:textSize="15sp" />
 
         <Button
@@ -65,8 +65,8 @@
             android:drawableLeft="@drawable/googleg_standard_color_18"
             android:fontFamily="@font/roboto_medium"
             android:text="SIGN IN WITH GOOGLE"
-            android:textColor="@color/common_google_signin_btn_text_dark_focused"
-            app:backgroundTint="@color/BtnGrey" />
+            android:textColor="@color/colorBlack"
+            app:backgroundTint="@color/colorButtonLight" />
 
         <TextView
             android:id="@+id/btn_sign_up"
@@ -78,7 +78,7 @@
             android:linksClickable="true"
             android:text="Or create and account"
             android:textAlignment="center"
-            android:textColor="@color/common_google_signin_btn_text_dark_focused"
+            android:textColor="@color/colorBlack"
             android:textSize="12sp" />
 
 
