--- a/app/src/main/res/layout/profile_fragment.xml
+++ b/app/src/main/res/layout/profile_fragment.xml
@@ -20,10 +20,10 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="#FFFFFF"
+            android:background="@color/colorWhite"
             app:navigationIcon="@drawable/ic_arrow_back_black"
             app:title="Profile"
-            app:titleTextColor="#FF081E6F">
+            app:titleTextColor="@color/colorPrimary">
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/profile_image"
@@ -40,7 +40,7 @@
                 android:layout_gravity="end"
                 android:layout_marginEnd="10sp"
                 android:text="@string/fa_user_circle"
-                android:textColor="#000000"
+                android:textColor="@color/colorBlack"
                 android:textSize="30sp"
                 android:visibility="visible"
                 app:solid_icon="true" />
@@ -65,7 +65,7 @@
             android:fontFamily="@font/roboto_medium"
             android:gravity="center"
             android:text="@{user.toString()}"
-            android:textColor="#000"
+            android:textColor="@color/colorBlack"
             android:textSize="26dp"
             android:textStyle="bold" />
 
