--- a/app/src/main/res/layout/journey_fragment.xml
+++ b/app/src/main/res/layout/journey_fragment.xml
@@ -25,6 +25,22 @@
         app:rippleColor="#fff"
         app:tint="@color/cardview_light_background" />
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/btn_add_landmark"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="20dp"
+        android:backgroundTint="@color/colorPrimary"
+        android:src="@drawable/ic_add_location_white_24dp"
+        android:visibility="gone"
+        app:fabSize="mini"
+        app:layout_constraintBottom_toTopOf="@id/btn_start_journey"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:rippleColor="#fff"
+        app:tint="@color/cardview_light_background" />
+
+
     <TextView
         android:id="@+id/txt_permission"
         android:layout_width="match_parent"
