--- a/app/src/main/res/layout/bottomsheet_add_landmark.xml
+++ b/app/src/main/res/layout/bottomsheet_add_landmark.xml
@@ -32,10 +32,16 @@
         android:layout_height="wrap_content" />
 
     <Button
+        android:id="@+id/btn_add_landmark_photos"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Add photos"
-        android:layout_gravity="center_horizontal"/>
+        android:layout_gravity="center_horizontal"
+        android:text="Add photos" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_images"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
     <LinearLayout
         android:layout_width="match_parent"
