--- a/app/src/main/res/layout/journey_fragment.xml
+++ b/app/src/main/res/layout/journey_fragment.xml
@@ -40,6 +40,21 @@
         app:rippleColor="#fff"
         app:tint="@color/cardview_light_background" />
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/btn_my_location"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="20dp"
+        android:backgroundTint="@color/colorPrimary"
+        android:src="@drawable/my_location"
+        android:visibility="gone"
+        app:fabSize="mini"
+        app:layout_constraintBottom_toTopOf="@id/btn_add_landmark"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:rippleColor="#fff"
+        app:tint="@color/cardview_light_background" />
+
 
     <TextView
         android:id="@+id/txt_permission"
