Theme color changed

--- a/app/src/main/res/drawable/btn1.xml
+++ b/app/src/main/res/drawable/btn1.xml
@@ -12,7 +12,7 @@
             />
         <path
             android:pathData="M0 0V29H306V0"
-            android:fillColor="#081E6F"
+            android:fillColor="#29B0A6"
             />
     </group>
 </vector>
