--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -30,7 +30,7 @@
             android:layout_marginBottom="@dimen/ef_margin_small"
             android:fontFamily="@font/roboto"
             android:hint="email"
-            android:textColor="@color/colorBlack"
+            android:textColor="@color/textColor"
             android:textSize="15sp" />
 
         <EditText
@@ -42,7 +42,7 @@
             android:fontFamily="@font/roboto"
             android:hint="Password"
             android:inputType="textPassword"
-            android:textColor="@color/colorBlack"
+            android:textColor="@color/textColor"
             android:textSize="15sp" />
 
         <Button
@@ -54,7 +54,8 @@
             android:layout_marginTop="@dimen/ef_margin_large"
             android:background="@drawable/btn1"
             android:fontFamily="@font/roboto_medium"
-            android:text="SIGN IN" />
+            android:text="SIGN IN"
+            app:backgroundTint="@color/colorButton" />
 
         <Button
             android:id="@+id/btn_google_sign_in"
@@ -78,7 +79,7 @@
             android:linksClickable="true"
             android:text="Or create and account"
             android:textAlignment="center"
-            android:textColor="@color/colorBlack"
+            android:textColor="@color/textColor"
             android:textSize="12sp" />
 
 
