--- a/app/src/main/res/layout/general_settings_fragment.xml
+++ b/app/src/main/res/layout/general_settings_fragment.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".ui.settings.general.generalSettings">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -12,7 +15,6 @@
             android:id="@+id/toolbar3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/colorWhite"
             android:minHeight="?attr/actionBarSize"
             android:theme="?attr/actionBarTheme"
             app:logo="@drawable/ic_arrow_back_black"
@@ -46,7 +48,7 @@
                 android:alpha="0.9"
                 android:clickable="false"
                 android:src="@drawable/ic_edit_white_24dp"
-                app:backgroundTint="@color/colorPrimary"
+                app:backgroundTint="@color/colorButton"
                 app:elevation="6dp"
                 app:fabCustomSize="35dp"
                 app:fabSize="mini"
@@ -66,8 +68,8 @@
             android:fontFamily="@font/roboto"
             android:hint="User Name"
             android:inputType="text"
-            android:textColor="@color/colorBlack"
-            android:textColorHint="@color/colorBlack"
+            android:textColor="@color/textColor"
+            android:textColorHint="@color/textColor"
             android:textSize="16sp" />
 
         <EditText
@@ -82,7 +84,7 @@
             android:hint="Email"
             android:inputType="text"
             android:textColor="@color/colorBlack"
-            android:textColorHint="@color/colorBlack"
+            android:textColorHint="@color/textColor"
             android:textSize="16sp" />
 
         <EditText
@@ -97,7 +99,7 @@
             android:hint="Phone number"
             android:inputType="text"
             android:textColor="@color/colorBlack"
-            android:textColorHint="@color/colorBlack"
+            android:textColorHint="@color/textColor"
             android:textSize="16sp" />
 
         <Button
@@ -111,9 +113,10 @@
             android:fontFamily="@font/roboto_medium"
             android:text="Save Changes"
             android:textSize="14sp"
+            app:backgroundTint="@color/colorButton"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
 
     </LinearLayout>
 
-</layout>
+</FrameLayout>
