--- a/app/src/main/res/layout/journey_details_fragment.xml
+++ b/app/src/main/res/layout/journey_details_fragment.xml
@@ -119,6 +119,7 @@
                     android:layout_gravity="center_vertical"
                     android:layout_marginRight="20dp"
                     android:text="(0)"
+                    android:textColor="@color/textColor"
                     android:textSize="15dp" />
             </LinearLayout>
 
@@ -159,7 +160,8 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="Origin: " />
+                    android:text="Origin: "
+                    android:textColor="@color/textColor" />
 
 
                 <TextView
@@ -182,7 +184,8 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="Destination:" />
+                    android:text="Destination:"
+                    android:textColor="@color/textColor" />
 
 
                 <TextView
@@ -218,6 +221,7 @@
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
         android:elevation="6dp"
-        android:src="@drawable/ic_hiking" />
+        android:src="@drawable/ic_hiking"
+        app:backgroundTint="@color/colorButton" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
