--- a/app/src/main/res/layout/journey_fragment.xml
+++ b/app/src/main/res/layout/journey_fragment.xml
@@ -17,7 +17,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="20dp"
-        android:backgroundTint="@color/colorPrimary"
+        android:backgroundTint="@color/colorButton"
         android:src="@drawable/ic_add_white_24dp"
         app:fabSize="auto"
         app:layout_constraintBottom_toBottomOf="parent"
