--- a/app/src/main/res/layout/journey_row.xml
+++ b/app/src/main/res/layout/journey_row.xml
@@ -26,7 +26,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="15dp"
             android:text=""
-            android:textColor="@android:color/white"
+            android:textColor="@color/textColor"
             android:textSize="22dp"
             android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@id/tv_difficulty"
@@ -53,7 +53,7 @@
             android:gravity="center"
             android:padding="5dp"
             android:text=""
-            android:textColor="@android:color/white"
+            android:textColor="@color/colorWhite"
             android:textSize="13dp"
             app:layout_constraintBottom_toTopOf="@id/tv_content"
             app:layout_constraintStart_toStartOf="parent" />
@@ -74,7 +74,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="(0)"
-            android:textColor="@android:color/white"
+            android:textColor="@color/colorWhite"
             app:layout_constraintBottom_toBottomOf="@+id/rating"
             app:layout_constraintStart_toEndOf="@+id/rating"
             app:layout_constraintTop_toTopOf="@+id/rating" />
@@ -86,7 +86,7 @@
             android:layout_marginStart="15dp"
             android:layout_marginBottom="15dp"
             android:text="sample"
-            android:textColor="@android:color/white"
+            android:textColor="@color/colorWhite"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
