--- a/app/src/main/res/layout/profile_fragment.xml
+++ b/app/src/main/res/layout/profile_fragment.xml
@@ -20,7 +20,6 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="@color/colorWhite"
             app:navigationIcon="@drawable/ic_arrow_back_black"
             app:title="Profile"
             app:titleTextColor="@color/colorPrimary">
@@ -40,7 +39,7 @@
                 android:layout_gravity="end"
                 android:layout_marginEnd="10sp"
                 android:text="@string/fa_user_circle"
-                android:textColor="@color/colorBlack"
+                android:textColor="@color/colorButton"
                 android:textSize="30sp"
                 android:visibility="visible"
                 app:solid_icon="true" />
@@ -81,6 +80,7 @@
                 android:layout_marginStart="80dp"
                 android:layout_weight="1"
                 android:gravity="center"
+                android:textColor="@color/textColor"
                 android:text="89\nShared Images" />
 
             <TextView
@@ -91,6 +91,7 @@
                 android:layout_marginEnd="80dp"
                 android:layout_weight="1"
                 android:gravity="center"
+                android:textColor="@color/textColor"
                 android:text="12\nShared Trips" />
         </LinearLayout>
 
