--- a/app/src/main/res/layout/start_journey_fragment.xml
+++ b/app/src/main/res/layout/start_journey_fragment.xml
@@ -115,10 +115,10 @@
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
         android:text="Start"
-        android:textColor="@color/colorWhite"
-        app:backgroundTint="@color/colorPrimary"
+        android:textColor="@color/colorBlack"
+        app:backgroundTint="@color/colorButton"
         app:icon="@drawable/ic_hiking"
-        app:iconTint="@color/colorWhite"
+        app:iconTint="@color/colorBlack"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
